--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alienmanbot",
   "version": "1.0.0",
   "description": "",
-  "main": "bot.js", alienmanbot-
+  "main": "bot.js", alienmanbot
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
