--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "alienmanbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.js", AlienManBot-
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test":
   },
   "keywords": [],
   "author": "",
