--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alienmanbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js", alienmanbot
+  "main": "index.js", AlienManBot
   "scripts": {
     "test":
   },
