--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js", 
   "scripts": {
-    "test":
-  }
+    "start": "node bot.js"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC"
